--- a/static/style.css
+++ b/static/style.css
@@ -105,9 +105,15 @@
   /************ Second Slide **********/
   .second-slide{
     background: url(images/about-section-2-bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     padding: 40px;
   }
   .second-slide img{
+    display: block; 
+    margin-left: auto;
+    margin-right: auto;
     max-width: 100%;
     height: auto;
   }
@@ -192,6 +198,7 @@
     .third-slide{
         position: relative;
         flex-direction:row-reverse;
+        align-items: flex-start;
         gap: 5vh;
         padding: 2vh;
     }
